[gd_scene load_steps=3 format=3 uid="uid://w076chsq54le"]

[ext_resource type="Script" path="res://Scenes/Models/room.gd" id="1_e527o"]
[ext_resource type="FontFile" uid="uid://bvc7otdv2tjnd" path="res://Resources/JetBrainsMono-VariableFont_wght.ttf" id="2_kcbs2"]

[node name="Room" type="Node2D"]
script = ExtResource("1_e527o")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -16.5
offset_right = 14.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kcbs2")
theme_override_font_sizes/font_size = 24
text = "r0"

[node name="TurretTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TurretCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TurretTimer" to="." method="_on_turret_timer_timeout"]
[connection signal="timeout" from="TurretCheckTimer" to="." method="_on_turret_check_timer_timeout"]
